--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class='main-content'>
             {{>header}}
+            <p>This app was created by Meenal Gupta . It uses accuweather.com and  mapbox api.</p>
             <img class='portrait' src='./img/me.jpg'>
         </div>
         {{>footer}}
